<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">Status Saver</string>
    <string name="app_name_about" translatable="false">Status Saver For WhatsApp</string>
    <string name="home">Status</string>
    <string name="browse_terms_of_service_and_privacy_policy_sum">Read and agree to our Terms of Service and Privacy Policy to continue.</string>
    <string name="browse_terms_of_service_and_privacy_policy">Browse the <i><u>Terms of Service</u></i> and <i><u>Privacy Policy</u></i></string>
    <string name="agree">Agree</string>
    <string name="app_version">Version %1s</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="feedback">Feedback</string>
    <string name="disclaimer">Disclaimer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="close">Close</string>
    <string name="summary_close">Are you sure to exit the application?</string>
    <string name="saved_status">Saved Status</string>
    <string name="direct_chat">Direct Chat</string>
    <string name="help">How to use?</string>
    <string name="whatsapp">Whatsapp</string>
    <string name="whatsapp_business">Whatsapp Business</string>
    <string name="permission_hint" translatable="false">Click this below button and Allow permission to access your status</string>
    <string name="allow_storage_access" translatable="false">Allow storage access</string>
    <string name="save">Save</string>
    <string name="share">Share</string>
    <string name="delete">Delete</string>
    <string name="repost">Repost</string>
    <string name="no_data_error">No images are found yet!</string>
    <string name="d_chat" translatable="false">Direct Chat</string>
    <string name="enter_mobile_number" translatable="false">Enter your phone number</string>
    <string name="enter_your_message" translatable="false">Enter your message</string>
    <string name="send">Send</string>
    <string name="how_to_use">How to use?</string>
    <string name="step1">Step 1</string>
    <string name="summary_first_step">Open WhatsApp app.</string>
    <string name="step2">Step 2</string>
    <string name="summary_second_step"> Watch your WhatsApp contact\'s status updates.</string>
    <string name="step3">Step 3</string>
    <string name="summary_third_step">Come back to Status Saver for WhatsApp app, and all the viewed statuses will be displayed.</string>
    <string name="step4">Step 4</string>
    <string name="summary_fourth_step">Click on download button or icon for save any status that you want.</string>
    <string name="step5">Step 5</string>
    <string name="summary_fifth_step">You can also share the saved status on other social media platforms.</string>
    <string name="rate_us">Rate us</string>
    <string name="tos_content"> <h5> Privacy Policy </h5> <br /> <p> I take your privacy very seriously. </p> <br /> <p> <b>Read You</b> does not collect any user data, and all sensitive information (passwords and other account information) is securely stored in the local application database on your device. </p> <br /> <p> <b>Read You</b> will use the following permissions to provide you with the service. </p> <br /> <p> - Access Network permission (for accessing online content as you specify) </p> <p> - Get network status permission (for getting whether the device currently has available network conditions) </p> <p> - Background service permission (to automatically sync your favorites for you on a regular basis) </p> <br /> <br /> <h5> Third Party Services </h5> <br /> <p> This policy does not apply to third-party services that you use with <b>Read You</b>. You can review the privacy policies of the third-party services you use on their websites </p> <br /> <br /> <h5> Disclaimers </h5> <br /> <p> <b>Read You</b> is a content collection tool only. Your use of <b>Read You</b> is subject to the laws and regulations of your country and region, and any liability arising from your actions will be borne by you personally. </p> <br /> <br /> <h5> Open Source License </h5> <br /> <p> <b>Read You</b> is an open source project under the GNU GPL 3.0 Open Source License[1], which allows you to use, reference, and modify the source code of <b>Read You</b> for free, but does not allow the modified and derived code to be distributed and sold as closed-source commercial software. For details, please see the full GNU GPL 3.0 Open Source License[2]. </p> <br /> <br /> <h5> Appendix </h5> <br /> <p> - [1] https://github.com/Ashinch/ReadYou </p> <p> - [2] https://www.gnu.org/licenses/gpl-3.0.html </p> </string>
    <string name="admob_app_id">ca-app-pub-8133357101666182~9358884570</string>
    <string name="title_activity_chat">ChatActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">History</string>
    <string name="second_fragment_label">Direct Chat</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="mInterstitialAd_test">ca-app-pub-3940256099942544/1033173712</string>
    <string name="mInterstitialAd_live">ca-app-pub-8133357101666182/2487737350</string>
    <string name="app_open_id">ca-app-pub-3940256099942544/3419835294</string>
    <string name="app_open_id_live">ca-app-pub-8133357101666182/8164140836</string>
    <string name="banner_ad_live">ca-app-pub-8133357101666182/5113900694</string>
    <string name="banner_ad_test">ca-app-pub-3940256099942544/6300978111</string>
    <string name="native_ad_test">ca-app-pub-3940256099942544/2247696110</string>
    <string name="native_ad_live">ca-app-pub-8133357101666182/7210151818</string>
    <string name="adurl">https://api.npoint.io/c81bdbb3f7140ca451f5</string>


    <string name="admob_banner_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="admob_interstitial_unit_id">ca-app-pub-3940256099942544/1033173712</string>
    <string name="admob_native_unit_id">ca-app-pub-3940256099942544/2247696110</string>
    <string name="admob_app_open_ad_unit_id">ca-app-pub-3940256099942544/3419835294</string>
    <string name="admob_rewarded_ad_unit_id">ca-app-pub-3940256099942544/5224354917</string>
    <string name="ads_status">false</string>


    <string name="keypad">Keypad</string>
    <string name="recent">Recent</string>
    <string name="note">Note</string>
    <string name="summary_permissions">Click on the country code to change the country.\n\nEnter number that you want and click to the Whatsapp icon button you will redirect to the whatsapp of that number.\n\nYou can also paste number here by clicking the paste button.\n\n</string>
    <string name="permissiondenied">Permission denied</string>
    <string name="summary_permission">This app requires both read and write permission to function properly. Without these permissions, the app will not be able to access and modify the necessary data.\n\u25CF Click on the go to settings button.\n\u25CF It takes to the application details settings page.\n\u25CF Then click on the permission and allow the storage permission.\n</string>

    <string name="go_setting">Go to Settings</string>
    <string name="goit">Got it</string>
    <string name="ad_attribution">Ad</string>
    <string name="test_device_id">EB46671689549F162FD792D653349B04</string>
    <string name="language">Language</string>
    <string name="select_language">Select Language</string>
    <string name="cancel">Cancel</string>

    <!-- strings.xml -->

    <string name="changing_language">Changing language...</string>

    <string name="ok">OK</string>
    <string name="choose_app">Choose App</string>
    <string name="send_feedback">Send Feedback</string>
    <string name="feedback_template">Dear Team,\n\n</string>
    <string name="disclaimer_text"><![CDATA[
    <p>Status Saver is not partnered with WhatsApp in any way. It is just a tool to save the WhatsApp Status.</p>
    <p>We don\'t own the copyrights of any Status. So please download or use Status for commercial purposes by taking respective owner\'s permission.</p>
]]></string>
    <string name="share_message">Status Saver is an easy-to-use mobile application that allows users to download and save WhatsApp statuses such as images, videos, and GIFs.\n\nhttps://play.google.com/store/apps/details?id=%1$s</string>
    e
    <string name="developer_name">Hari Moradiya</string>
    <string name="made_in_india">Made in India with ❤️</string>
</resources>