<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/home"/>
        <item
            android:id="@+id/nav_saved_status"
            android:icon="@drawable/baseline_save_24"
            android:title="@string/saved_status"/>
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_about"
            android:title="@string/about"/>
    </group>
    <group
        android:checkableBehavior="single"
        android:id="@+id/group2">
        <item
            android:id="@+id/nav_direct_chat"
            android:icon="@drawable/baseline_chat_24"
            android:title="@string/direct_chat"/>
        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/baseline_help_24"
            android:title="@string/help"/>
    </group>
</menu>