<?xml version="1.0" encoding="utf-8"?>
<me.zhanghai.android.fastscroll.FastScrollScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scroll_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="24dp"
            android:layout_margin="24dp"
            android:id="@+id/card_view_about"
            app:layout_constraintTop_toTopOf="parent"
            style="@style/Widget.Material3.CardView.Elevated">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp">
                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/image_view_app_icon"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginTop="8dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:src="@mipmap/ic_launcher"
                    android:tooltipText="@string/app_name"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="SpeakableTextPresentCheck"/>
                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/text_view_app_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:text="@string/app_name"
                    app:layout_constraintTop_toBottomOf="@id/image_view_app_icon"/>
                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/text_view_app_version"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginTop="8dp"
                    android:text="@string/app_version"
                    android:drawableStart="@drawable/ic_data_object"
                    android:drawablePadding="4dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/text_view_app_title"/>
                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_google_dev"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:textAppearance="@style/FontTheme"
                    android:minHeight="0dp"
                    android:text="@string/rate_us"
                    android:tooltipText="@string/rate_us"
                    style="@style/Widget.Material3.Chip.Assist.Elevated"
                    app:chipIcon="@drawable/baseline_rate_review_24"
                    app:chipSpacing="0dp"
                    app:layout_constraintEnd_toStartOf="@id/chip_youtube"
                    app:layout_constraintHorizontal_chainStyle="packed"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/text_view_app_version"/>
                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_youtube"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:minHeight="0dp"
                    android:text="@string/share"
                    android:tooltipText="@string/share"
                    android:textAppearance="@style/FontTheme"
                    style="@style/Widget.Material3.Chip.Assist.Elevated"
                    app:chipIcon="@drawable/share"
                    app:chipSpacing="0dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/chip_google_dev"
                    app:layout_constraintTop_toBottomOf="@id/text_view_app_version"/>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>


        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="24dp"
            android:clickable="true"
            android:focusable="true"
            android:layout_margin="24dp"
            android:id="@+id/card_view_privacy"
            android:layout_marginTop="@dimen/_15sdp"
            app:layout_constraintTop_toBottomOf="@+id/card_view_about"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/_8sdp">

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/image_view_privacy_icon"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:background="@drawable/ic_circle_btn"
                android:clickable="true"
                android:focusable="true"
                android:src="@drawable/baseline_privacy_tip_24"
                android:tooltipText="@string/app_name"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="SpeakableTextPresentCheck"/>

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/text_view_privacy_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:text="@string/privacy_policy"
                    android:layout_marginLeft="@dimen/_20sdp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toEndOf="@id/image_view_privacy_icon"/>
                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/image_view_more_icon"
                    android:layout_width="@dimen/_24sdp"
                    android:layout_height="@dimen/_24sdp"
                    android:clickable="true"
                    android:focusable="true"
                    android:src="@drawable/ic_more"
                    android:tooltipText="@string/privacy_policy"
                    app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="SpeakableTextPresentCheck"/>
            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>
        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="24dp"
            android:clickable="true"
            android:focusable="true"
            android:layout_margin="24dp"
            android:id="@+id/card_view_feedback"
            android:layout_marginTop="@dimen/_7sdp"
            app:layout_constraintTop_toBottomOf="@+id/card_view_privacy"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/_8sdp">

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/image_view_feedback_icon"
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:background="@drawable/ic_circle_btn"
                    android:clickable="true"
                    android:focusable="true"
                    android:src="@drawable/baseline_feedback_24"
                    android:tooltipText="@string/app_name"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="SpeakableTextPresentCheck"/>

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/text_view_feedback_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:text="@string/feedback"
                    android:layout_marginLeft="@dimen/_20sdp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toEndOf="@id/image_view_feedback_icon"/>
                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="@dimen/_24sdp"
                    android:layout_height="@dimen/_24sdp"
                    android:clickable="true"
                    android:focusable="true"
                    android:src="@drawable/ic_more"
                    android:tooltipText="@string/privacy_policy"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="SpeakableTextPresentCheck"/>
            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>
        <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="24dp"
        android:clickable="true"
        android:focusable="true"
        android:layout_margin="24dp"
        android:id="@+id/card_view_disclaimer"
        android:layout_marginTop="@dimen/_7sdp"
        app:layout_constraintTop_toBottomOf="@+id/card_view_feedback"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_8sdp">

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/image_view_disclaimer_icon"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:background="@drawable/ic_circle_btn"
                android:clickable="true"
                android:focusable="true"
                android:src="@drawable/ic_about_disclaimer"
                android:tooltipText="@string/disclaimer"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="SpeakableTextPresentCheck"/>

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textStyle="bold"
                android:text="@string/disclaimer"
                android:layout_marginLeft="@dimen/_20sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@id/image_view_disclaimer_icon"/>
            <androidx.appcompat.widget.AppCompatImageView

                android:layout_width="@dimen/_24sdp"
                android:layout_height="@dimen/_24sdp"
                android:clickable="true"
                android:focusable="true"
                android:src="@drawable/ic_more"
                android:tooltipText="@string/privacy_policy"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="SpeakableTextPresentCheck"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>




    </androidx.constraintlayout.widget.ConstraintLayout>
</me.zhanghai.android.fastscroll.FastScrollScrollView>